# focss

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile-mccs  README.md  SSFM.sln  main.cpp
SSFM/: SSFM.vcxproj  SSFM.vcxproj.filters
doc/: mainpage.dox  namespaces.dox
gnuplot-sripts/: osf.plt  sino-maria.plt  sino-one.plt  sino-two.plt  sino.plt  two.plt  wdm.plt
headers/: edfa.h  edfa_amplifier.h  fiber.h  field.h  linear_equalizer.h  lms_equalizer.h  modulation.h  phase_shift_equalizer.h  photonics.h  signal.h  ssfm.h  utility.h
include/: field.h  photonics.h
include/equalizer/: least_mean_square.h
include/focss/: communication_line.h  focss.h  utility.h
include/focss/component/: edfa.h
include/focss/equalizer/: ideal_phase_recovery.h  least_mean_square.h  nonlinear_phase_recovery.h  sino.h
sources/: edfa.cpp  fiber.cpp  field.cpp  linear_equalizer.cpp  lms_equalizer.cpp  modulation.cpp  phase_shift_equalizer.cpp  signal.cpp  ssfm.cpp  utility.cpp
src/: experiment.cpp  fiber.cpp  field.cpp  main.cpp  modulation.cpp  test.cpp
src/amplifier/: edfa.cpp
src/focss/: core.h  definitions.h  field.cpp  field.h  functions.cpp  functions.h  ssfm.cpp  utility.cpp  utility.h  vector.cpp  vector.h
src/focss/component/: amplifier.cpp  amplifier.h  edfa.cpp  fiber.cpp
src/focss/equalizer/: admm_regression.cpp  admm_regression.h  homothety_equalizer.cpp  ideal_phase_recovery.cpp  lasso_admm.cpp  least_mean_square.cpp  least_mean_square.h  linear.h  nonlinear_phase_recovery.cpp  nonlinear_phase_recovery.h  phase_shift_equalizer.cpp  phase_shift_equalizer.h  scalar_equalizer.cpp  sino.cpp  sino.h  wdm_sino.cpp  wdm_sino.h
src/focss/module/: amplifier.cpp  amplifier.h  fiber.cpp  fiber.h
src/focss/processing/: modulation.cpp  modulation.h
src/focss/solver/: ssfm.cpp  ssfm.h
src/tasks/: dp_scoring.cpp  find_ber.cpp  parameters.h  redyuk_scoring.cpp  sp_run.cpp  sp_scoring.cpp  systems.cpp  systems.h  tasks.h  verification.cpp  wdm_run.cpp  wdm_scoring.cpp
